# invest-mental-health

./: .gitignore  README.md  invest-mental-health.Rproj  mental-health-model-case-study.ipynb
Batch_processing/: Batch.py  Cut.py  Folder Creat.py  Folder_Creat_V2.py  Folder_Creat_V3.py  Shp_convert.py  Treecover_approach.py  Vis2.py  backup.py  batchV2.py  shapefile_cut.py  shapefilemerge.py  visuallization.py
Mental_Health_Web/: aoi_Boston.geojson  app.py  index.html  requirements.txt  test.py
code/: 00-aoi-cities.RmD  00a-aoi-urban-area.ipynb  00a1-aoi-urban-map-compare.RmD  00a2-aoi-urban-area-indepth.ipynb  00b-aoi-cities.RmD  00b-aoi-places-in-metro.ipynb  00b1-aoi-places-in-metro.ipynb  00b2-generate-individual-aoi.ipynb  00b3-sample-city-for-testing.Rmd  00c-aoi-map-compare.RmD  00c-aoi-ses-tract-level.RmD  00d-SVI.RmD  04-health-baseline.Rmd  05-mental-health-cost.Rmd  10a-basic_data_desc_health_tcc_ndvi.ipynb  NDVI-by-LULC.ipynb  (+29 more)
pipelines/urban_greening_targets/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
pipelines/urban_greening_targets/scripts/: run_all.sh
pipelines/urban_greening_targets/src/urban_greening_targets/: __init__.py  cities.py  cli.py  config.py
pipelines/urban_greening_targets/src/urban_greening_targets/pipeline/: __init__.py  db.py  models.py  stage_a_discovery.py  stage_b_collection.py  stage_c_extraction.py  stage_d_scoring.py  stage_e_consolidation.py  stage_f_qa.py  stage_g_export.py
pipelines/urban_greening_targets/src/urban_greening_targets/prompts/: discovery.txt  extraction.txt  verification.txt
(+334 files in other folders)
